[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainmaker-http"
version = "0.0.2"
description = "Minimal async HTTP client for ESP RainMaker (Zehnder Multi Controller)"
readme = "README.md"
license = {text = "MIT"}
authors = [ { name = "morphiumdeus", email = "morphiumdeus@user.github.com" } ]
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.8.1,<4",
]

[project.urls]
"Homepage" = "https://example.org/rainmaker-http"
"Repository" = "https://example.org/rainmaker-http"

[tool.setuptools]
package-dir = {"" = ""}

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.20",
  "ruff>=0.0.241",
  "build",
  "twine",
]
